client/src/components/bookPage/BooksPage.css
.left__conatiner-book {
    width: 300px;
    position: fixed;
    left: 0;
    top: 64px;
    bottom: 0;
    height: 100vh;
    border-right: 2px solid var(--border);
    z-index: 99999;
    background: #fff;
}


/* ----right side---- */
.right__container-book {
    position: relative;
    width: calc(100vw - 320px);
    left: 300px;
    right: 0;
    top: 0;
    bottom: 0;
    padding: 0 2rem;
}

.right__container-book .heading {
    border-bottom: none;
    padding-bottom: 20px;
    padding-top: 15px;
    margin: 0;
}

/* ---top right ---  */
.right__top {
    padding-bottom: 10px;
    border-bottom: 1px solid var(--border);
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 10px;
}

.search__book {
    display: flex;
    align-items: center;
    gap: 10px;
}

.colapse__menu {
    width: 38px;
    height: 38px;
    background: rgba(128, 128, 128, 0.093);
    border-radius: 5px;
    display: none;
    place-items: center;
    cursor: pointer;
}

.search__book input {
    border: 1px solid var(--border);
    padding: 5px 10px;
    border-radius: 5px;
    width: 500px;
}

.sort__filter select {
    border: 1px solid var(--border);
    padding: 5px 10px;
    border-radius: 5px;
}

.right__book__content {
    margin-top: 2rem;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    row-gap: 30px;
    column-gap: 10px;
}







/* ---------------media query(mediam screen)------------- */
@media screen and (max-width: 1024px) {
    .left__conatiner-book {
        left: -300px;
        transition: var(--transition);
    }

    .left__conatiner-book.show {
        left: 0;
    }

    .right__container-book {
        width: 100vw;
        left: 0;
    }

    .colapse__menu {
        display: grid;
    }
}

/* ---------------media query(mediam and mediam screen)------------- */
@media screen and (max-width: 850px) {

    .right__book__content {
        grid-template-columns: repeat(2, 1fr);
    }

    .search__book input {
        width: 400px;
    }
}


/*---------------media query(mediam screen)------------- */
@media screen and (max-width: 700px) {

    /* ----right side---- */
    .right__container-book {
        width: 100%;
        padding: 0 1rem;
    }

    .right__book__content {
        width: 100%;
        grid-template-columns: 1fr;
    }

    .search__book input {
        max-width: 200px;
        width: 100%;
    }

    .sort__filter select {
        font-size: 12px;
        width: max-content;
        padding: 10px 2px;
    }

    .sort__filter select option {
        font-size: 6px;
        width: max-content;
    }

}

/*---------------media query(very small screen)------------- */
@media screen and (max-width: 400px) {
    .search__book input {
        max-width: 200px;
        width: 100%;
    }
}

